package ca.mcmaster.se2aa4.island.team105.enums;

// used for changing direction and orientation of the drone

public enum Direction {
    N,

    S,

    E,
    
    W;
}

